--- a/index.html
+++ b/index.html
@@ -1070,11 +1070,11 @@
                     </div>
 
                     <div class="footer-social" style="margin-top: 30px;">
-                        <a href="https://www.facebook.com" target="https://web.facebook.com/profile.php?id=61580248484580">
+                        <a href="https://www.facebook.com" target="https://www.facebook.com/barigo.itali">
                             <i class="fab fa-facebook-f"></i>
                         </a>
                         <a href="https://www.twitter.com" target="_blank">
-                            <i class=https://web.facebook.com/profile.php?id=61580248484580"></i>
+                            <i class=https://www.facebook.com/barigo.itali"></i>
                         </a>
                         <a href="https://www.instagram.com" target="_blank">
                             <i class="fab fa-instagram"></i>
