--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@
 
                     <div class="footer-social" style="margin-top: 30px;">
                         <a href="https://www.facebook.com" target="https://www.facebook.com/barigo.itali">
-                            <i class="fab fa-facebook-f"></i>
+                            <i class="https://www.facebook.com/barigo.itali"></i>
                         </a>
                         <a href="https://www.twitter.com" target="_blank">
                             <i class=https://www.facebook.com/barigo.itali"></i>
