--- a/index.html
+++ b/index.html
@@ -1076,7 +1076,7 @@
                     </div>
 
                     <div class="footer-social" style="margin-top: 30px;">
-                        <a href="https://www.facebook.com" target="https://web.facebook.com/barigo.itali?_rdc=1&_rdr#">
+                        <a href="https://web.facebook.com/barigo.itali?_rdc=1&_rdr#" target="https://web.facebook.com/barigo.itali?_rdc=1&_rdr#">
                             <i class="https://web.facebook.com/barigo.itali?_rdc=1&_rdr#"></i>
                         </a>
                         <a href="https://www.twitter.com" target="_blank">
