--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@
                     </div>
 
                     <div class="footer-social" style="margin-top: 30px;">
-                        <a href="https://elmosa3idimmobilier-dz.github.io/" target="_blank">
+                        <a href="https://web.facebook.com/profile.php?id=61580248484580" target="_blank">
                             <i class="fab fa-facebook-f"></i>
                         </a>
                         <a href="https://www.twitter.com" target="_blank">
